--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <div class="section syllabus">
         <div class="container">
-            <h1>Syllabus</h1>
-            <h3>Overview</h3>
+            <h1>Overview</h1>
+            <h3>Description</h3>
             <p>
                 Learn the basics of programming through HTML, CSS, and Python. Explore 
                 possible programming paths with our final project selection. Get confident 
@@ -47,11 +47,33 @@
             <p>1 Week</p>
             <h3>Requisites</h3>
             <p>No previous skills required</p>
-        </div>
-    </div>
 
-    <div class="section instructors">
-        <div class="container">
+            <h1>Syllabus</h1>
+            <h3>1. Learn to Code</h3>
+            <p>
+                It begins! Get oriented, learn the basics of HTML, write your first line of
+                code, and receive your first review!
+            </p>
+            <h3>2. Make a Stylish Webpage</h3>
+            <p>
+                    Add style to your HTML code with CSS (Cascading Style Sheets). 
+                    Experiment with adjusting various style rules in CSS to make your
+                     website shine. Achieve the look and presentation you want for your own 
+                     webpage.
+            </p>
+            <h3>3. Learn to Code</h3>
+            <p>
+                It begins! Get oriented, learn the basics of HTML, write your first line of
+                code, and receive your first review!
+            </p>
+            <h3>4. Make a Stylish Webpage</h3>
+            <p>
+                    Add style to your HTML code with CSS (Cascading Style Sheets). 
+                    Experiment with adjusting various style rules in CSS to make your
+                     website shine. Achieve the look and presentation you want for your own 
+                     webpage.
+            </p>
+
             <h1>Instructors</h1>
             <div class="instructor">
                 <img src="instructor.png"/>
@@ -60,6 +82,8 @@
                     <p>Creator of edPlayground</p>
                 </div>
             </div>
+
+            <a href="#" class="button">Enroll</a>
         </div>
     </div>
 
