--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="section main">
         <div class="container">
             <div class="header">
-                <h1>edPlayground</h1>
+                <a href="#" class="brand button"><h1>edPlayground</h1></a>
                 <div class="links">
                     <a href="#" class="button">Learn</a>
                     <a href="#" class="button">Sign In</a>
@@ -28,7 +28,7 @@
                 <p>
                     Learn the basics of HTML, CSS and build web applications with Python
                 </p>
-                <a href="#" class="button">Enroll</a>
+                <a href="#" class="button clear">Enroll</a>
             </div>
         </div>
     </div>
@@ -38,9 +38,9 @@
             <h1>Overview</h1>
             <h3>Description</h3>
             <p>
-                Learn the basics of programming through HTML, CSS, and Python. Explore 
-                possible programming paths with our final project selection. Get confident 
-                in your ability to think and problem-solve like a programmer. Be primed and 
+                Learn the basics of programming through HTML, CSS, and Python. Explore
+                possible programming paths with our final project selection. Get confident
+                in your ability to think and problem-solve like a programmer. Be primed and
                 ready for our career-ready programs after mastering these projects.
             </p>
             <h3>Estimated Duration</h3>
@@ -56,9 +56,9 @@
             </p>
             <h3>2. Make a Stylish Webpage</h3>
             <p>
-                    Add style to your HTML code with CSS (Cascading Style Sheets). 
+                    Add style to your HTML code with CSS (Cascading Style Sheets).
                     Experiment with adjusting various style rules in CSS to make your
-                     website shine. Achieve the look and presentation you want for your own 
+                     website shine. Achieve the look and presentation you want for your own
                      webpage.
             </p>
             <h3>3. Learn to Code</h3>
@@ -68,9 +68,9 @@
             </p>
             <h3>4. Make a Stylish Webpage</h3>
             <p>
-                    Add style to your HTML code with CSS (Cascading Style Sheets). 
+                    Add style to your HTML code with CSS (Cascading Style Sheets).
                     Experiment with adjusting various style rules in CSS to make your
-                     website shine. Achieve the look and presentation you want for your own 
+                     website shine. Achieve the look and presentation you want for your own
                      webpage.
             </p>
 
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <a href="#" class="button">Enroll</a>
+            <a href="#" class="button clear">Enroll</a>
         </div>
     </div>
 
