--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>edPlayground</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -12,10 +13,10 @@
     <div class="section main">
         <div class="container">
             <div class="header">
-                <a href="#" class="brand button"><h1>edPlayground</h1></a>
+                <a href="/" class="brand button"><h1>edPlayground</h1></a>
                 <div class="links">
-                    <a href="#" class="button">Learn</a>
-                    <a href="#" class="button">Sign In</a>
+                    <a href="/learn" class="button">Learn</a>
+                    <a href="/auth" class="button">Sign In</a>
                 </div>
             </div>
         </div>
@@ -78,7 +79,7 @@
                 </div>
             </div>
 
-            <a href="#" class="button clear">Enroll</a>
+            <a href="/learn/enroll/5a9874ac08e1b72a4074bf96" class="button clear">Enroll</a>
         </div>
     </div>
 
